# ejson

./: CMakeLists.txt  README.md  ejson.cpp  ejson.h  ejson_value_export.h  ejson_value_import.h  ejson_variadic_func.h  make_variadic_func.py
example/: build.sh  ejson_helloworld.cpp
